# CMPT433WORK

./: README.md
ass1/: CMakeLists.txt  reaction_timer.c
ass1/app/: CMakeLists.txt
ass1/app/include/: reaction_timer.h
ass1/app/src/: main.c  reaction_timer.c
ass1/hal/src/: LEDStart.c  joystick.c
ass2/: CMakeLists.txt
ass2/app/include/: lcd_display_impl.h
ass2/app/src/: lcd_display_impl.c  main.c
ass2/hal/src/: btn_statemachine.c  gpio.c  periodTimer.c  pwm_led.c  rotary_encoder.c  sampler.c  terminal_display.c  udp_server.c
beatbox/: .gitignore  CMakeLists.txt
beatbox/app/: CMakeLists.txt
beatbox/app/include/: accelerometer.h  beatPlayer.h  displayManager.h  drumSounds.h  inputHandler.h  periodTimer.h  terminalDisplay.h  udpServer.h
beatbox/app/src/: accelerometer.c  beatPlayer.c  displayManager.c  drumSounds.c  inputHandler.c  main.c  periodTimer.c  terminalDisplay.c  udpServer.c
beatbox/beatbox-server-copy/public/: index.html
beatbox/hal/: CMakeLists.txt
beatbox/hal/include/hal/: accelerometer.h  audioMixer.h  buttonStateMachine.h  gpio.h  joystick.h  lcdDisplay.h  rotaryEncoder.h
beatbox/hal/src/: accelerometer.c  audioMixer.c  buttonStateMachine.c  gpio.c  joystick.c  lcdDisplay.c  rotaryEncoder.c
linux_neopixel/: .gitignore  CMakeLists.txt  README.md
linux_neopixel/app/: CMakeLists.txt
linux_neopixel/app/include/: lcd_display_impl.h  memory_handler.h  sharedDataLayout.h  target_game.h
linux_neopixel/app/src/: lcd_display_impl.c  main.c  memory_handler.c  target_game.c
neopixel/: .gitignore
neopixel/src/: main.c
(+17 files in other folders)
